--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="chat_section">
         <div class="brand">
-            <img height="40" src="/logo2.jpg" alt=" ">
+            <img height="40" src="./logo2.jpg" alt=" ">
             <h1>GoGo-Chat</h1>
         </div>
         <div class="message_area"></div>
@@ -23,7 +23,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
 
-    <script src="/client.js"></script>
+    <script src="./client.js"></script>
 </body>
 
 
